Update and rename Winesilove.html to winesilove.html

--- a/winesilove.html
+++ b/winesilove.html
@@ -40,7 +40,7 @@ div{max-width: 390px;
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *for wine tasting events follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> </p>
 
-<div align="justify"> <a href=index.html><font color=80ff00> <font face="menlo"> <font size=3><u>Go back</u></a></div>
+<div align="justify"> <a href=/index.html><font color=80ff00> <font face="menlo"> <font size=3><u>Go back</u></a></div>
 
 </body>
 </html>
