--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@ div{max-width: 390px;
 <img src="matija.png" style="width:390px;height:auto%;margin-left: 25px">
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>Hello, my name is Matija. Welcome to my internet website</div>
 
-<p align="justify"> <a href=index.html><font color=ffff00> <font face="menlo"> <font size=3><u>Go back</u></a></p>
+<p align="justify"> <a href=matija.wine/index.html><font color=ffff00> <font face="menlo"> <font size=3><u>Go back</u></a></p>
 
 </body>
 </html>
