--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ div{max-width: 390px;
 </style>
 
 <head>
-  <img class=logo src=img/logo.png style="width:auto%;height:92px;margin-left: 25px">
+  <img class=logo src="\img\logo.png" style="width:auto%;height:92px;margin-left: 25px">
 <div>
 </head>
 
