--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,7 @@ p{max-width: 390px;
 }
 
 </style>
-
+images/logo.png
 <style>
 body { background-color: black; }
 div{max-width: 390px;
@@ -23,7 +23,7 @@ div{max-width: 390px;
 </style>
 
 <head>
-  <img src="matija.wine/images/logo.png" style="width:auto%;height:92px;margin-left: 25px">
+  <img src="images/logo.png" style="width:auto%;height:92px;margin-left: 25px">
 <div>
 </head>
 
