--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@ div{max-width: 390px;
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *for wine tasting events follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> </p>
 
-<div align="justify"> <a href=pages/about.html><font color=ff8000> <font face="menlo"> <font size=3><u>About me</u></a> <font color=white><font size=2> - find out more about what i do</div>
-<div align="justify"> <a href=pages/winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>Wines i love</u></a> <font color=white><font size=2> - shoutouts to fellow winemakers</div>
-<div align="justify"> <a href=pages/yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>Your photos</u></a> <font color=white><font size=2> - my fave page, send me more</div>
-<div align="justify"> <a href=pages/links.html><font color=00ff80> <font face="menlo"> <font size=3><u>Links</u></a><font color=white><font size=2> - random stuff i found on the internets</div>
-<div align="justify"> <a href=pages/archive.html><font color=0080ff> <font face="menlo"> <font size=3><u>Archive</u></a> <font color=white><font size=2> - page under construction</div>
+<div align="justify"> <a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>About me</u></a> <font color=white><font size=2> - find out more about what i do</div>
+<div align="justify"> <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>Wines i love</u></a> <font color=white><font size=2> - shoutouts to fellow winemakers</div>
+<div align="justify"> <a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>Your photos</u></a> <font color=white><font size=2> - my fave page, send me more</div>
+<div align="justify"> <a href=links.html><font color=00ff80> <font face="menlo"> <font size=3><u>Links</u></a><font color=white><font size=2> - random stuff i found on the internets</div>
+<div align="justify"> <a href=archive.html><font color=0080ff> <font face="menlo"> <font size=3><u>Archive</u></a> <font color=white><font size=2> - page under construction</div>
 <p align="justify"> <font color=8000ff> <font face="menlo"> <font size=3><u>Current lineup</u> <font color=white><font size=2> </p>
 </body>
 <img class=logo src="images/komunamuskat.jpg" style="width:390px;height:auto%;margin-left: 25px">
