--- a/archive.html
+++ b/archive.html
@@ -35,7 +35,7 @@ div{max-width: 390px;
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *page under construction</font> </div>
 
-<p align="justify"> <a href=matija.wine/index.html><font color=8000ff> <font face="menlo"> <font size=3><u>Go back</u></a></p>
+<p align="justify"> <a href=https://matijawine.github.io/matija.wine/><font color=8000ff> <font face="menlo"> <font size=3><u>Go back</u></a></p>
 
 </body>
 </html>
