--- a/archive.html
+++ b/archive.html
@@ -23,7 +23,7 @@ div{max-width: 390px;
 </style>
 
 <head>
-  <img class=logo src="logo.png" style="width:auto%;height:92px;margin-left: 25px">
+  <img class=logo src="images/logo.png" style="width:auto%;height:92px;margin-left: 25px">
 <div>
 </head>
 
@@ -35,7 +35,7 @@ div{max-width: 390px;
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *page under construction</font> </div>
 
-<p align="justify"> <a href=https://matijawine.github.io/matija.wine/><font color=8000ff> <font face="menlo"> <font size=3><u>Go back</u></a></p>
+<p align="justify"> <a href=matija.wine><font color=8000ff> <font face="menlo"> <font size=3><u>Go back</u></a></p>
 
 </body>
 </html>
