--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ div{max-width: 390px;
 </style>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <img src="images/logo.png" style="width:auto%;height:92px;margin-left: 25px">
 <div>
 </head>
