--- a/archive.html
+++ b/archive.html
@@ -6,8 +6,6 @@
 body { background-color: black; }
 p{max-width: 390px;
   min-width: 390px;
-  margin-left: 25px;
-  margin-right:25px;
 }
 
 </style>
@@ -16,13 +14,12 @@ p{max-width: 390px;
 body { background-color: black; }
 div{max-width: 390px;
   min-width: 390px;
-  margin-left: 25px;
-  margin-right: 25px;
 }
 
 </style>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <img class=logo src="images/logo.png" style="width:auto%;height:92px;margin-left: 25px">
 <div>
 </head>
@@ -35,7 +32,7 @@ div{max-width: 390px;
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *page under construction</font> </div>
 
-<p align="justify"> <a href=matija.wine><font color=8000ff> <font face="menlo"> <font size=3><u>Go back</u></a></p>
+<p align="justify"> <a href=./index.html><font color=8000ff> <font face="menlo"> <font size=3><u>Go back</u></a></p>
 
 </body>
 </html>
