--- a/about.html
+++ b/about.html
@@ -6,8 +6,6 @@
 body { background-color: black; }
 p{max-width: 390px;
   min-width: 390px;
-  margin-left: 25px;
-  margin-right:25px;
 }
 
 </style>
@@ -16,14 +14,12 @@ p{max-width: 390px;
 body { background-color: black; }
 div{max-width: 390px;
   min-width: 390px;
-  margin-left: 25px;
-  margin-right: 25px;
 }
 
 </style>
 
 <head>
-  <img src="images/logo.png" style="width:auto%;height:92px;margin-left: 25px">
+  <img src="images/logo.png" style="width:auto%;height:92px;">
 <div>
 </head>
 
