--- a/archive.html
+++ b/archive.html
@@ -20,7 +20,7 @@ div{max-width: 390px;
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <img class=logo src="images/logo.png" style="width:auto%;height:92px;margin-left: 25px">
+  <img class=logo src="images/logo.png" style="width:auto%;height:92px;">
 <div>
 </head>
 
