--- a/winesilove.html
+++ b/winesilove.html
@@ -20,7 +20,7 @@ div{max-width: 390px;
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <img class=logo src="./images/logo.png" style="width:auto%;height:92px;">
+  <img class=logo src="./images/logo.png" style="width:100%;height:auto%;">
 <div>
 </head>
 
