--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ div{max-width: 390px;
 </style>
 
 <head>
-  <img src="images/logo.png" style="width:auto%;height:92px;">
+  <img src="images/logo.png" style="width:100%;height:auto%;">
 <div>
 </head>
 
