--- a/index.html
+++ b/index.html
@@ -44,5 +44,5 @@ div{max-width: 390px;
 <div align="justify"> <a href=archive.html><font color=0080ff> <font face="menlo"> <font size=3><u>Archive</u></a> <font color=white><font size=2> - page under construction</div>
 <p align="justify"> <font color=8000ff> <font face="menlo"> <font size=3><u>Current lineup</u> <font color=white><font size=2> </p>
 </body>
-<img class=logo src="images/komunamuskat.jpg" style="width:390px;height:auto%;margin-left: 25px">
+<img class=logo src="images/komunamuskat.jpg" style="width:390px;height:auto%;">
 </html>
