--- a/about.html
+++ b/about.html
@@ -19,7 +19,8 @@ div{max-width: 390px;
 </style>
 
 <head>
-  <img src="images/logo.png" style="width:100%;height:auto%;">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <img src="images/logo.png" style="width:390px;height:auto%;">
 <div>
 </head>
 
@@ -28,7 +29,7 @@ div{max-width: 390px;
   UNCONVENTIONAL WINES </font></p>
 <p align="justify"><font color=#ff8000> <font face="menlo"> <font size=4>
   <u>About me</u></font></p>
-<img src="images/matija.png" style="width:390px;height:auto%;margin-left: 25px">
+<img src="images/matija.png" style="width:390px;height:auto%;">
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>Hello, my name is Matija. Welcome to my internet website</div>
 
 <p align="justify"> <a href=index.html><font color=ffff00> <font face="menlo"> <font size=3><u>Go back</u></a></p>
