--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ div{max-width: 390px;
 <audio controls autoplay loop>
         <source src="popcorn.mp3">
     </audio>
+  <iframe src="popcorn.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
 </body>
 
 </html>
