--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@ div{max-width: 390px;
 <div align="justify"> <a href=links.html><font color=00ff80> <font face="menlo"> <font size=3><u>Links</u></a><font color=white><font size=2> - random stuff i found on the internets</div>
 <div align="justify"> <a href=archive.html><font color=0080ff> <font face="menlo"> <font size=3><u>Archive</u></a> <font color=white><font size=2> - page under construction</div>
 <p align="justify"> <font color=8000ff> <font face="menlo"> <font size=3><u>Current lineup</u> <font color=white><font size=2> </p>
-<img class=logo src="images/komunamuskat.jpg" style="width:390px;height:auto%;">
+<video width="390" height="auto" controls autoplay>
+  <source src="keti.mov" type="video/mov">
+</video>
 
 </body>
 
