--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ div{max-width: 390px;
 <div align="justify"> <a href=archive.html><font color=0080ff> <font face="menlo"> <font size=3><u>Archive</u></a> <font color=white><font size=2> - page under construction</div>
 <p align="justify"> <font color=8000ff> <font face="menlo"> <font size=3><u>Current lineup</u> <font color=white><font size=2> </p>
 <video width="390" height="auto" controls autoplay>
-  <source src="keti.mov" type="video/mov">
+  <source src="keti.mp4" type="video/mp4">
 </video>
 
 </body>
