--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@ div{max-width: 390px;
 <div align="justify"><font color=#ff0000> <font face="menlo"> <font size=4>
   <u>Important, please read!</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *i'm not a business, i do not have a registered company, the bottles don't adhere 2 labeling standards; i'm just a guy making wine 4 fun, and <font color=#ff0000>C<font color=#ff8000>A<font color=#ffff00>N<font color=#80ff00>N<font color=#80ff00>O<font color=#0080ff>T <font color=white>sell 2 restaurants & retailers, soz</font> </div>
+  *i'm not a business, i do not have a registered company, the bottles don't adhere 2 labeling standards; i'm just a guy making wine 4 fun & <font color=#ff0000>C<font color=#ff8000>A<font color=#ffff00>N<font color=#80ff00>N<font color=#80ff00>O<font color=#0080ff>T <font color=white>sell thru retail. wine dealers - fuck off</font> </div>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *direct sales only, one bottle per order. if you cannot afford it, but really <font color=#ff0080>L<font color=#ff0000>O<font color=#ff8000
->V<font color=#ffff00>E<font color=#80ff00> W<font color=#00ff80>I<font color=#0080ff>N<font color=8000ff>E<font color=white>, drop me a line and I might send you one for free :)</font> </p>
+  *all bottles are painted by hand and differ from one another. direct sales only, <font color=#ff0000>1 <font color=#ff8000
+>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </font> </p>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *for wine tasting events follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> </p>
+  *for wine tasting events & info on restaurants with stock, follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> </p>
 
 <div align="justify"> <a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>About me</u></a> <font color=white><font size=2> - find out more about what i do</div>
 <div align="justify"> <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>Wines i love</u></a> <font color=white><font size=2> - shoutouts to fellow winemakers</div>
