--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@ div{max-width: 390px;
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *all bottles are painted by hand and differ from one another. direct sales only, <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *i'm not a business, i do not have a registered company, the bottles don't adhere 2 labeling standards; i'm just a guy making wine 4 fun & <font color=#ff0000>C<font color=#ff8000>A<font color=#ffff00>N<font color=#80ff00>N<font color=#80ff00>O<font color=#0080ff>T <font color=white>sell thru retailers. wine dealers - fuck off</font>
+  *i'm not a business, i do not have a registered company, the bottles don't adhere 2 labeling standards; i'm just a guy making wine 4 fun & <font color=#ff0000>C<font color=#ff8000>A<font color=#ffff00>N<font color=#80ff00>N<font color=#80ff00>O<font color=#0080ff>T <font color=white>sell thru retailers. wine dealers-fuck off</font>
   </font> </p>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *for wine tasting events & info on restaurants with stock, follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> </p>
 
 <div align="justify"> <a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>About me</u></a> <font color=white><font size=2> - find out more about what i do</div>
 <div align="justify"> <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>Wines i love</u></a> <font color=white><font size=2> - shoutouts to fellow winemakers</div>
-<div align="justify"> <a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>Your photos</u></a> <font color=white><font size=2> - my fave page, send me more</div>
-<div align="justify"> <a href=links.html><font color=00ff80> <font face="menlo"> <font size=3><u>Links</u></a><font color=white><font size=2> - random stuff i found on the internets</div>
+<div align="justify"> <a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>Your photos</u></a> <font color=white><font size=2> - my fave page, but please stop sending nudes</div>
+<div align="justify"> <a href=links.html><font color=00ff80> <font face="menlo"> <font size=3><u>Links</u></a><font color=white><font size=2> - random fun stuff i found on the internets</div>
 <div align="justify"> <a href=archive.html><font color=0080ff> <font face="menlo"> <font size=3><u>Archive</u></a> <font color=white><font size=2> - page under construction</div>
 <p align="justify"> <font color=8000ff> <font face="menlo"> <font size=3><u>Current lineup</u> <font color=white><font size=2> </p>
 
