--- a/yourphotos.html
+++ b/yourphotos.html
@@ -27,7 +27,7 @@ div{max-width: 390px;
 <body>
   <p align="justify"><font color=#ffff00> <font face="menlo"> <font size=4>
   UNCONVENTIONAL WINES </font></p>
-<div align="justify"><font color=#ffff00> <font face="menlo"> <font size=4>
+<div align="justify"><font color=#80ff00> <font face="menlo"> <font size=4>
   <u>Your snaps</u></font></div>
 <img src="./images/endorfin.png" style="width:390px;height:auto%;">
 <div align="justify"> <a href=index.html><font color=00ff80> <font face="menlo"> <font size=3><u>Go back</u></a></div>
