--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ div{max-width: 390px;
 <p align="justify"> <font color=8000ff> <font face="menlo"> <font size=3><u>Current lineup</u> <font color=white><font size=2> </p>
 
    <img src="images/petnat1.gif" style="width:390px;height:auto%;">
+  Ecstasy Pét Nat - $40 - <font color=#ff0000>S<font color=#ff8000>O<font color=#ffff00>L<font color=#80ff00>D <font color=#00ff80>O<font color=#0080ff>U<font color=8000ff>T<font color=white>
 
 
 </body>
