--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ div{max-width: 390px;
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *all bottles are painted by hand and differ from one another. direct sales only, <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *i'm not a business, i do not have a registered company, the bottles don't adhere 2 labeling standards; i'm just a guy making wine 4 fun & <font color=#ff0000>C<font color=#ff8000>A<font color=#ffff00>N<font color=#80ff00>N<font color=#80ff00>O<font color=#0080ff>T <font color=white>sell thru retailers. wine dealers fuck off</font>
+  *i'm not a business, i do not have a registered company, the bottles don't adhere 2 labeling standards; i'm just a guy making wine 4 fun & <font color=#ff0000>C<font color=#ff8000>A<font color=#ffff00>N<font color=#80ff00>N<font color=#0080ff>O<font color=#8000ff>T <font color=white>sell thru retailers. wine dealers fuck off</font>
   </font> </p>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *for wine tasting events & info on restaurants with stock, follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> </p>
@@ -44,8 +44,8 @@ div{max-width: 390px;
 <div align="justify"> <a href=archive.html><font color=0080ff> <font face="menlo"> <font size=3><u>Archive</u></a> <font color=white><font size=2> page under construction</div>
 <p align="justify"> <font color=8000ff> <font face="menlo"> <font size=3><u>Current lineup</u> <font color=white><font size=2> </p>
 
-  Ecstasy Pét Nat - $40 - <font color=#ff0000>S<font color=#ff8000>O<font color=#ffff00>L<font color=#80ff00>D <font color=#00ff80>O<font color=#0080ff>U<font color=8000ff>T<font color=white>
-   <img src="images/petnat1.gif" style="width:390px;height:auto%;">
+  <font color=#ff0000>PI<font color=#ff8000>NK<font color=#ffff00> E<font color=#80ff00>CS<font color=#0080ff>TA<font color=8000ff>SY<font color=white> - $40
+   <img src="images/pinkecstasy.gif" style="width:390px;height:auto%;">
   
 
 
