--- a/yourphotos.html
+++ b/yourphotos.html
@@ -29,7 +29,7 @@ div{max-width: 390px;
   UNCONVENTIONAL WINES </font></p>
 <div align="justify"><font color=#80ff00> <font face="menlo"> <font size=4>
   <u>Your snaps</u></font></div>
-  Endorfin, Belgrade, Feb 2024
+  <p align="justify"><font color=#white> <font face="menlo"> <font size=3>Endorfin, Belgrade, Feb 2024</font></p>
 <img src="./images/endorfin.png" style="width:390px;height:auto%;">
 <div align="justify"> <a href=index.html><font color=00ff80> <font face="menlo"> <font size=3><u>Go back</u></a></div>
 
