--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ div{max-width: 390px;
 <div align="justify"> <a href=archive.html><font color=0080ff> <font face="menlo"> <font size=3><u>Archive</u></a> <font color=white><font size=2> page under construction</div>
 <p align="justify"> <font color=8000ff> <font face="menlo"> <font size=3><u>Current lineup</u> <font color=white><font size=2> </p>
 
-  <font color=#ff0080>P<font color=#ff0000>I<font color=#ff8000>N<font color=#ffff00>K <font color=#00ff00>E<font color=00ff80>C<font color=#00ffff>S<font color=#0080ff>T<font color=#0000ff>A<font color=#8000ff>S<font color=#ff00ff>Y<font color=white> - $40
+  <font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=#ff00ff>Y<font color=white> - $40
    <img src="images/pinkecstasy.gif" style="width:390px;height:auto%;">
   
 
