--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ div{max-width: 390px;
 <div align="justify"> <a href=archive.html><font color=0080ff> <font face="menlo"> <font size=3><u>Archive</u></a> <font color=white><font size=2> page under construction</div>
 <p align="justify"> <font color=8000ff> <font face="menlo"> <font size=3><u>Current lineup</u> <font color=white><font size=2> </p>
 
-  <div></div> align="justify"><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat - $40</div>
-  <div align="justify">grapes: prokupac; yeast: EC-1118; added so<sub>2</sub>: 0; method: saignée; alc:≈ 12%; residual sugar: 1-3g; pressure: 7bar</div> 
+  <div align="justify"><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat - $40</div>
+  <div align="justify">grapes: prokupac; yeast: EC-1118; added so<sub>2</sub>: 0; method: saignée; alc:≈ 12%; residual sugar: 1-3g</div> 
     <img src="images/pinkecstasy.gif" style="width:390px;height:auto%;">
 
 
