--- a/links.html
+++ b/links.html
@@ -30,12 +30,7 @@ div{max-width: 390px;
 <div align="justify"><font color=#00ff80> <font face="menlo"> <font size=4>
   <u>Links</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *i’m not a business, i don’t have a registered company, the bottles don’t adhere 2 labeling standards; i’m just a guy making wine 4 fun, and <font color=#ff0000>CANNOT <font color=white>sell 2 restaurants & retailers, soz</font> </div>
-<p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *direct sales only, one bottle per order. if you cannot afford it, but really <font color=#ff0080>L<font color=#ff0000>O<font color=#ff8000
->V<font color=#ffff00>E<font color=#80ff00> W<font color=#00ff80>I<font color=#0080ff>N<font color=8000ff>E<font color=white>, drop me a line and I might send you one for free :)</font> </p>
-<p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *for wine tasting events follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> </p>
+how to synthesize MDMA <a href="links/MDMA.pdf></a> </p>
 
 <div align="justify"> <a href=index.html><font color=0080ff> <font face="menlo"> <font size=3><u>Go back</u></a></div>
 
