--- a/links.html
+++ b/links.html
@@ -32,7 +32,7 @@ div{max-width: 390px;
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
 how to synthesize <a href="links/MDMA.pdf">MDMA</a></div>
 
-<div align="justify"> <a href=index.html><font color=0080ff> <font face="menlo"> <font size=3><u>Go back</u></a></div>
+<p align="justify"> <a href=index.html><font color=0080ff> <font face="menlo"> <font size=3><u>Go back</u></a></p>
 
 </body>
 </html>
