--- a/links.html
+++ b/links.html
@@ -30,7 +30,7 @@ div{max-width: 390px;
 <div align="justify"><font color=#00ff80> <font face="menlo"> <font size=3>
   <u>Links</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-how to synthesize <a href="links/MDMA.pdf">MDMA</a></div>
+how to synthesize <a href="links/MDMA.pdf"><font size=3>MDMA</font></a></div>
 
 <p align="justify"> <a href=index.html><font color=0080ff> <font face="menlo"> <font size=3><u>Go back</u></a></p>
 
