--- a/about.html
+++ b/about.html
@@ -30,7 +30,8 @@ div{max-width: 390px;
 <p align="justify"><font color=#ff8000> <font face="menlo"> <font size=4>
   <u>About me</u></font></p>
 <img src="images/matija.png" style="width:390px;height:auto%;">
-<div align="justify"> <font color=white> <font face="menlo"> <font size=2>Hello, my name is Matija. Welcome to my internet website</div>
+<div align="justify"> <font color=white> <font face="menlo"> <font size=2>
+  *page under construction</font> </div>
 
 <p align="justify"> <a href=index.html><font color=ffff00> <font face="menlo"> <font size=3><u>Go back</u></a></p>
 
