--- a/yourphotos.html
+++ b/yourphotos.html
@@ -31,6 +31,10 @@ div{max-width: 390px;
   <u>Your snaps</u></font></p>
   <div align="justify"><font color=white> <font face="menlo"> <font size=2>Endorfin, Belgrade, Feb 2024</font></div>
 <img src="./images/endorfin.png" style="width:390px;height:auto%;">
+     <div align="justify"><font color=white> <font face="menlo"> <font size=2>Friends from vino.rs, Belgrade, Feb 2024</font></div>
+<img src="./images/vinors.png" style="width:390px;height:auto%;">
+        <div align="justify"><font color=white> <font face="menlo"> <font size=2>bday present for Mila, Belgrade, Feb 2024</font></div>
+<img src="./images/mila.png" style="width:390px;height:auto%;">
 <div align="justify"> <a href=index.html><font color=00ff80> <font face="menlo"> <font size=3><u>Go back</u></a></div>
 
 </body>
