--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ div{max-width: 390px;
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *all bottles are painted by hand and differ from one another. direct sales only, <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *i'm not a business, i do not have a registered company, the bottles don't adhere 2 labeling standards; i'm just a guy making wine 4 fun & <font color=#ff0000>C<font color=#ff8000>A<font color=#ffff00>N<font color=#80ff00>N<font color=#0080ff>O<font color=#8000ff>T <font color=white>sell thru retailers. wine dealers fuck off</font>
+  *i'm not a business, i do not have a registered company, the bottles don't adhere 2 labeling standards; i'm just a guy making wine 4 fun & <font color=#ff0000>C<font color=#ff8000>A<font color=#ffff00>N<font color=#80ff00>N<font color=#0080ff>O<font color=#8000ff>T <font color=white>sell thru retailers</font>
   </font> </p>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *for wine tasting events & info on restaurants with stock, follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a>. DM 4 orders</p>
