--- a/indexjp.html
+++ b/indexjp.html
@@ -26,16 +26,15 @@ div{max-width: 390px;
 
 <body>
 <p align="justify"><font color=#ff0080> <font face="menlo"> <font size=4>
-  UNCONVENTIONAL WINES </font></p>
+  型破りなワイン </font></p>
 <div align="justify"><font color=#ff0000> <font face="menlo"> <font size=3>
-  <u>Important, please read!</u></font></div>
+  <u>重要です、必ずお読みください！</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-   *all bottles are painted by hand and differ from one another. direct sales only, <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div>
+   *すべてのボトルは手作業でペイントされており、それぞれ異なります。直接販売のみ、1注文につき1ボトルでお願いします:), <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *i'm not a business, i do not have a registered company, the bottles don't adhere 2 labeling standards; i'm just a guy making wine 4 fun & <font color=#ff0000>C<font color=#ff8000>A<font color=#ffff00>N<font color=#80ff00>N<font color=#0080ff>O<font color=#8000ff>T <font color=white>sell thru retailers</font>
-  </font> </p>
+  *私はビジネスではなく、登録された会社も持っていません。ボトルはラベル表示基準に準拠していません。私は趣味でワインを作っているだけなので小売店で販売することはできません</p>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *for wine tasting events & info on restaurants with stock, follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a>. DM 4 orders</p>
+  *ワインの試飲イベントや在庫のあるレストランの情報については<a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a>をフォローしてください。ご注文はダイレクトメッセージで</p>
 
 <div align="justify"> <a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about me</u></a> <font color=white><font size=2> find out more about what i do</div>
 <div align="justify"> <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>wines i love</u></a> <font color=white><font size=2> shoutouts to fellow winemakers</div>
