--- a/links.html
+++ b/links.html
@@ -31,7 +31,7 @@ div{max-width: 390px;
   <u>Links</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
 how to synthesize <a href="links/MDMA.pdf"><font size=3>mdma</font></a></div>
-
+<div align="justify"> <a href=indexjp.html><font color=0080ff> <font face="menlo"> <font size=3><u>Japanese</u></a></div>
 <p align="justify"> <a href=index.html><font color=0080ff> <font face="menlo"> <font size=3><u>Go back</u></a></p>
 
 </body>
