--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ div{max-width: 390px;
 
 <body>
 <p align="justify"><font color=#ff0080> <font face="menlo"> <font size=4>
-  UNCONVENTIONAL WINES </font></p>
+  UNCONVENTIONAL WINES </font>
+<p align="left"><font size=6>🇫🇷🇷🇺🇯🇵</p>
 <div align="justify"><font color=#ff0000> <font face="menlo"> <font size=3>
   <u>Important, please read!</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
