--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ div{max-width: 390px;
 
 <body>
 <p align="justify"><font color=#ff0080> <font face="menlo"> <font size=4>
-  UNCONVENTIONAL WINES         </font><font size=6>🇫🇷🇷🇺🇯🇵</p>
+  UNCONVENTIONAL WINES </font><font size=6><sub> 🇫🇷 🇷🇺 🇯🇵</sub></p>
 <div align="justify"><font color=#ff0000> <font face="menlo"> <font size=3>
   <u>Important, please read!</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
