--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@ div{max-width: 390px;
 </head>
 
 <body>
-<p align="justify"><font color=#ff0080> <font face="menlo"> <font size=4>
-  UNCONVENTIONAL WINES </font><font size=6> <sub><a href=indexfr.html>🇫🇷</a> <a href=indexru.html>🇷🇺</a> <a href=indexjp.html>🇯🇵</a> <a href=indexrs.html>🇷🇸</a></sub></p>
+<p align="center"><font color=#ff0080><font size=5> <a href=indexfr.html>🇫🇷</a> <a href=indexru.html>🇷🇺</a> <a href=indexjp.html>🇯🇵</a> <a href=indexrs.html>🇷🇸</a></p>
 <div align="justify"><font color=#ff0000> <font face="menlo"> <font size=3>
   <u>Important, please read!</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
