--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@ div{max-width: 390px;
 <div align="right"><font color=#ff0080><font size=5> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
 <div align="justify"><font color=#ff0000> <font face="menlo"> <font size=3>
   <u>Important, please read!</u></font></div>
-<div align="justify"> <font color=white> <font face="menlo"> <font size=1>
-   *all bottles are painted by hand and differ from one another. direct sales only, <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div>
-<p align="justify"> <font color=white> <font face="menlo"> <font size=1>
-  *i'm not a business, i do not have a registered company, the bottles don't adhere 2 labeling standards; i'm just a guy making wine 4 fun & <font color=#ff0000>C<font color=#ff8000>A<font color=#ffff00>N<font color=#80ff00>N<font color=#0080ff>O<font color=#8000ff>T <font color=white>sell thru retailers</font>
+<div align="justify"> <font color=white> <font face="menlo"> <font size=2>
+   *bottles are made individually and differ from 1 another. i do small batches, so <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div>
+<p align="justify"> <font color=white> <font face="menlo"> <font size=2>
+  *direct sales only / worldwide shipping / <font color=#ff0000>C<font color=#ff8000>A<font color=#ffff00>N<font color=#80ff00>N<font color=#0080ff>O<font color=#8000ff>T <font color=white>sell thru retailers</font>
   </font> </p>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *for wine tasting events & info on restaurants with stock, follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a>. DM 4 orders</p>
