--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@ div{max-width: 390px;
 <div align="justify"><font color=#ff0000> <font face="menlo"> <font size=3>
   <u>Important, please read!</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-   *bottles are made individually and differ from 1 another. i do small batches, so <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div>
+   *bottles r made individually & differ from 1 another. i do small batches, so <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *direct sales only / worldwide shipping / <font color=#ff0000>C<font color=#ff8000>A<font color=#ffff00>N<font color=#80ff00>N<font color=#0080ff>O<font color=#8000ff>T <font color=white>sell thru retailers</font>
-  </font> </p>
+  *direct sales only / crypto / worldwide shipping</p>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *for wine tasting events & info on restaurants with stock, follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a>. DM 4 orders</p>
 
