--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ div{max-width: 390px;
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *direct sales only / crypto / worldwide shipping</p>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> for events and popups; dm 2 buy</p>
+  *follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> 4 fun; dm 2 buy</p>
 
 <div align="justify"> <a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about me</u></a> <font color=white><font size=2> find out more about what i do</div>
 <div align="justify"> <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>wines i love</u></a> <font color=white><font size=2> shoutouts to fellow winemakers</div>
