--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ div{max-width: 390px;
 <div align="justify"><font color=#ff0000> <font face="menlo"> <font size=3>
   <u>Important, please read!</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-   *bottles are made individually & are different; i do small batches, so <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div>
+   *bottles are made individually & are different;<div>i do small batches, so <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div></div>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *direct sales only / crypto / worldwide shipping</p>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
