--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ div{max-width: 390px;
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *bottles are made individually & are different;<div>i do small batches / <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div></div>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *direct sales only / crypto / worldwide shipping</p>
+  *direct sales only / <font color=#ff0000>c<font color=#ff8000>r<font color=#ffff00>y<font color=#80ff00>p<font color=#0080ff>t<font color=8000ff>o<font color=white> / worldwide shipping</p>
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> 4 fun; dm 2 buy</p>
 
