--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 body { background-color: black; }
 p{max-width: 390px;
-  min-width: 390px;
+  min-width: 0px;
 }
 
 </style>
@@ -13,7 +13,7 @@ p{max-width: 390px;
 <style>
 body { background-color: black; }
 div{max-width: 390px;
-  min-width: 390px;
+  min-width: 0px;
 }
 
 </style>
@@ -35,11 +35,11 @@ div{max-width: 390px;
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> 4 fun; dm 2 buy</p>
 
-<div align="justify"> <a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about me</u></a> <font color=white><font size=2> find out more about what i do</div>
-<div align="justify"> <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>wines i love</u></a> <font color=white><font size=2> shoutouts to fellow winemakers</div>
-<div align="justify"> <a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>your snaps</u></a> <font color=white><font size=2> my fave page, stop sending nudes tho</div>
-<div align="justify"> <a href=links.html><font color=00ff80> <font face="menlo"> <font size=3><u>links</u></a><font color=white><font size=2> random fun stuff i found on the internets</div>
-<div align="justify"> <a href=archive.html><font color=0080ff> <font face="menlo"> <font size=3><u>archive</u></a> <font color=white><font size=2> page under construction</div>
+<div align="justify"> <a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about me</u></a> <font color=white><font size=2></div>
+<div align="justify"> <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>wines i love</u></a> <font color=white><font size=2></div>
+<div align="justify"> <a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>your snaps</u></a> <font color=white><font size=2></div>
+<div align="justify"> <a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a><font color=white><font size=2></div>
+
 <p align="justify"> <font color=8000ff> <font face="menlo"> <font size=3><u>current lineup</u> <font color=white><font size=2> </p>
 
   <div align="center"><font size=3><s><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat - $40 / 295 DOGE</s> SOLD OUT! </font></div>
