--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ div{max-width: 390px;
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> 4 fun; dm 2 buy</p>
 
-<div align="justify"> <a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about me</u></a> <font color=white><font size=2></div>
-<div align="justify"> <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>wines i love</u></a> <font color=white><font size=2></div>
+<div align="justify"> <a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about me</u></a> <font color=white><font size=2> & what i do</div> 
+<div align="justify"> <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a> <font color=white><font size=2>2 winemakers</div>
 <div align="justify"> <a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>your snaps</u></a> <font color=white><font size=2></div>
 <div align="justify"> <a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a><font color=white><font size=2></div>
 
