--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@ div{max-width: 390px;
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> 4 fun; dm 2 buy</p>
 
-<div align="justify"> <a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about me</u></a> <font color=white><font size=2> & what i do</div> 
+<div align="justify"> <a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about me</u></a> <font color=white><font size=2> & wines i make</div> 
 <div align="justify"> <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a> <font color=white><font size=2>2 winemakers</div>
 <div align="justify"> <a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>your snaps</u></a> <font color=white><font size=2></div>
 <div align="justify"> <a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a><font color=white><font size=2></div>
 
-<p align="justify"> <font color=8000ff> <font face="menlo"> <font size=3><u>current lineup</u> <font color=white><font size=2> </p>
+<p align="justify"> <font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u> <font color=white><font size=2> </p>
 
   <div align="center"><font size=3><s><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat - $40 / 295 DOGE</s> SOLD OUT! </font></div>
   <div align="justify"><font size=2><font color=white>grapes: prokupac; yeast: EC-1118; added SO<sub>2</sub>: 0g; method: saignée; alc: ≈12%; residual sugar: 1-3g</font></div> 
