--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ div{max-width: 390px;
 
 <body>
 <div align="right"><font color=#ff0080><font size=5> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
-<div align="justify"><font color=#ff0000> <font face="menlo"> <font size=3>
+<div align="center"><font color=#ff0000> <font face="menlo"> <font size=3>
   <u>important, please read!</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *bottles are made individually & are different;<div>i do small batches / <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div></div>
@@ -40,12 +40,12 @@ div{max-width: 390px;
 <a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>snaps</u></a> <font color=white><font size=2>
 <a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a><font color=white><font size=2></div>
 
-<p align="justify"> <font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u> <font color=white><font size=2> </p>
+<p align="center"> <font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u> <font color=white><font size=2> </p>
 
   <div align="center"><font size=3><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat</font></div>
   <div align="justify"><font size=2><font color=white>grapes: prokupac; yeast: EC-1118; added SO<sub>2</sub>: 0g; method: saignée; alc: ≈12%; residual sugar: 1-3g</font></div> 
     <img src="images/pinkecstasy.gif" style="width:390px;height:auto%;">
-  <div align="justify"><font size=2><font color=white><s>$40</s> - SOLD OUT!</font></div>
+  <div align="right"><font size=2><font color=white><s>$40</s> - SOLD OUT!</font></div>
 
 
 
