--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ div{max-width: 390px;
 
 <body>
 <div align="right"><font color=#ff0080><font size=5> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
-<div align="right"><font color=#ff0000> <font face="menlo"> <font size=3>
+<div align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
   <u>important, please read!</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *bottles are made individually & are different;<div>i do small batches / <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div></div>
@@ -35,12 +35,11 @@ div{max-width: 390px;
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> 4 fun; dm 2 buy</p>
 
-<div align="center"><a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about</u></a> <font color=white><font size=2> 
-<a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a> <font color=white><font size=2>
-<a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>snaps</u></a> <font color=white><font size=2>
-<a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a><font color=white><font size=2></div>
-
-<p align="center"> <font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u> <font color=white><font size=2> </p>
+<div align="center"><a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about</u></a> 
+<a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a>
+<a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>snaps</u></a>
+<a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a></div>
+<font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u> <font color=white><font size=2> </div>
 
   <div align="center"><font size=3><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat</font></div>
   <div align="justify"><font size=2><font color=white>grapes: prokupac; yeast: EC-1118; added SO<sub>2</sub>: 0g; method: saignée; alc: ≈12%; residual sugar: 1-3g</font></div> 
