--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ div{max-width: 390px;
 <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a>
 <a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>snaps</u></a>
 <a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a>
-<font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u> <font color=white><font size=2>↓</p>
+<font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></p>
 
   <div align="center"><font size=3><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat</font></div>
   <div align="justify"><font size=2><font color=white>grapes: prokupac; yeast: EC-1118; added SO<sub>2</sub>: 0g; method: saignée; alc: ≈12%; residual sugar: 1-3g</font></div> 
