--- a/about.html
+++ b/about.html
@@ -1,11 +1,12 @@
+
 <html>
 
-<title> matija.wine </title>
+<title> shrooms&html </title>
 
 <style>
 body { background-color: black; }
 p{max-width: 390px;
-  min-width: 390px;
+  min-width: 0px;
 }
 
 </style>
@@ -13,7 +14,7 @@ p{max-width: 390px;
 <style>
 body { background-color: black; }
 div{max-width: 390px;
-  min-width: 390px;
+  min-width: 0px;
 }
 
 </style>
@@ -25,15 +26,28 @@ div{max-width: 390px;
 </head>
 
 <body>
-<p align="justify"><font color=#ff0000> <font face="menlo"> <font size=4>
-  UNCONVENTIONAL WINES </font></p>
-<p align="justify"><font color=#ff8000> <font face="menlo"> <font size=4>
-  <u>About me</u></font></p>
+<div align="right"><font color=#ff0080><font size=5> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
+<div align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
+  <u>important, please read!</u></font></div>
+<div align="justify"> <font color=white> <font face="menlo"> <font size=2>
+   *bottles are made individually & are different;<div>i do small batches / <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div></div>
+<div align="justify"> <font color=white> <font face="menlo"> <font size=2>
+  *direct sales only / <font color=#ff0000>c<font color=#ff8000>r<font color=#ffff00>y<font color=#80ff00>p<font color=#0080ff>t<font color=8000ff>o<font color=white> / worldwide shipping</div>
+<div align="justify"> <font color=white> <font face="menlo"> <font size=2>
+  *follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> 4 fun; dm 2 buy</div>
+
+<p align="center"><font color=ff8000> <font face="menlo"> <font size=3><u>about</u> 
+<a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a>
+<a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>snaps</u></a>
+<a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a>
+<a href=index.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a></p>
+
 <img src="images/matija.png" style="width:390px;height:auto%;">
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *page under construction</font> </div>
 
-<p align="justify"> <a href=index.html><font color=ffff00> <font face="menlo"> <font size=3><u>Go back</u></a></p>
+
 
 </body>
+
 </html>
